adding in unsupervised kmeans

--- a/tutorial_classification/tutorial_classifier.ipynb
+++ b/tutorial_classification/tutorial_classifier.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import sklearn.datasets\n",
-    "from sklearn import neighbors, tree\n",
+    "from sklearn import neighbors, tree, cluster\n",
     "from sklearn.model_selection import KFold\n",
     "from sklearn.metrics import accuracy_score, roc_auc_score, precision_score, recall_score, f1_score\n",
     "from sklearn.metrics import confusion_matrix, classification_report\n",
@@ -63,6 +63,29 @@
     "for i, j in it.combinations(enumerate(iris.feature_names), 2):\n",
     "    print (i,j)\n",
     "    draw_scatter(iris.data, iris.target, i[0], j[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# unsupervised k-means \n",
+    "k_means = cluster.KMeans(n_clusters=4)\n",
+    "k_means.fit(iris.data)\n",
+    "k_means_label = k_means.labels_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, j in it.combinations(enumerate(iris.feature_names), 2):\n",
+    "    print(i,j)\n",
+    "    draw_scatter(iris.data, k_means_label, i[0], j[0])"
    ]
   },
   {
@@ -144,6 +167,20 @@
     "# https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.KFold.html\n",
     "# http://scikit-learn.org/stable/tutorial/statistical_inference/supervised_learning.html"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
