reorg folders, add nlp updated tutorial

--- a/tutorial_2_twitter_retweet_net/tutorial_twitter_api_s2022.ipynb
+++ b/tutorial_2_twitter_retweet_net/tutorial_twitter_api_s2022.ipynb
@@ -270,7 +270,7 @@
    "source": [
     "### Saving data to your machine\n",
     "tweet_data_list = [tweet.data for tweet in tweets_field_exp[0]]\n",
-    "with open(\"query1.json\", \"w\") as outfile:\n",
+    "with open(\"../datasets/query1.json\", \"w\") as outfile:\n",
     "    json.dump(tweet_data_list, outfile, indent=4)\n"
    ]
   },
@@ -388,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
